--- a/server/plugins/SimpleHomes/Homes.yml
+++ b/server/plugins/SimpleHomes/Homes.yml
@@ -4,3 +4,19 @@ mileswa1q2:
     X: 6.602604912248801
     Y: 70.0
     Z: -319.300000011921
+  Penguinrobert:
+    world: world
+    X: 62.57784371516425
+    Y: 64.0
+    Z: -170.10127789134742
+Penguinrobert:
+  miles:
+    world: world
+    X: -2.1266732650595292
+    Y: 69.0
+    Z: -319.5007368895936
+  '11':
+    world: world
+    X: 62.6872843027497
+    Y: 64.0
+    Z: -170.5710417808186
