--- a/server/server.properties
+++ b/server/server.properties
@@ -1,7 +1,7 @@
 #Minecraft server properties
-#Sat Apr 20 01:28:36 UTC 2024
+#Mon Apr 22 13:41:01 UTC 2024
 allow-flight=false
-allow-nether=false
+allow-nether=true
 announce-player-achievements=true
 broadcast-console-to-ops=false
 debug=false
