--- a/server/server.properties
+++ b/server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Fri Apr 26 13:41:05 UTC 2024
+#Fri Apr 26 16:21:44 UTC 2024
 allow-flight=false
 allow-nether=true
 announce-player-achievements=true
@@ -20,7 +20,7 @@ level-type=DEFAULT
 max-build-height=256
 max-players=20
 max-world-size=29999984
-motd=milese mincraft srver
+motd=hivew mincraft srver
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
