--- a/server/paper.yml
+++ b/server/paper.yml
@@ -16,9 +16,9 @@ effect-modifiers:
   strength: 1.3
   weakness: -0.5
 stackable-buckets:
-  lava: false
-  water: false
-  milk: false
+  lava: true
+  water: true
+  milk: true
 warnWhenSettingExcessiveVelocity: true
 world-settings:
   default:
@@ -33,21 +33,21 @@ world-settings:
       stronghold: true
       temple: true
       village: true
-      flat-bedrock: false
+      flat-bedrock: true
     allow-block-location-tab-completion: true
     disable-teleportation-suffocation-check: false
     fast-drain:
-      lava: false
+      lava: true
       water: false
     lava-flow-speed:
       normal: 30
       nether: 10
     remove-unloaded:
       enderpearls: true
-      tnt-entities: true
+      tnt-entities: false
       falling-blocks: true
     game-mechanics:
-      boats-drop-boats: false
+      boats-drop-boats: true
       disable-player-crits: false
       disable-chest-cat-detection: false
       disable-end-credits: false
@@ -83,8 +83,8 @@ world-settings:
     fix-cannons: false
     tnt-entity-height-nerf: 0
     use-hopper-check: false
-    all-chunks-are-slime-chunks: false
-    allow-undead-horse-leashing: false
+    all-chunks-are-slime-chunks: true
+    allow-undead-horse-leashing: true
     container-update-tick-rate: 1
     keep-spawn-loaded: true
     falling-blocks-collide-with-signs: false
