--- a/server/server.properties
+++ b/server/server.properties
@@ -15,7 +15,7 @@ generate-structures=true
 generator-settings=
 hardcore=false
 level-name=world
-level-seed=111111111111111
+level-seed=
 level-type=DEFAULT
 max-build-height=256
 max-players=20
