--- a/server/plugins/SimpleHomes/Homes.yml
+++ b/server/plugins/SimpleHomes/Homes.yml
@@ -9,11 +9,6 @@ mileswa1q2:
     X: -545.722662010853
     Y: 131.0
     Z: 258.7110378320224
-  mileswa1q2:
-    world: world
-    X: 61.767217605327815
-    Y: 66.0
-    Z: -1771.5570004764263
   'yes':
     world: world
     X: -247.27108883376226
@@ -29,6 +24,11 @@ mileswa1q2:
     X: -307.68440375910365
     Y: 56.0
     Z: 575.1988136010068
+  ad:
+    world: world
+    X: -101.77621532180426
+    Y: 71.0
+    Z: 92.57540090348537
 Penguinrobert:
   base:
     world: world
@@ -120,6 +120,16 @@ idk:
     X: 173.04636216345028
     Y: 72.0
     Z: -830.6355258477848
+  '0':
+    world: world
+    X: 647.8966205920702
+    Y: 64.0
+    Z: 243.45970877861134
+  '00':
+    world: world
+    X: -389.48403831670726
+    Y: 63.0
+    Z: -727.3664985836305
 simsimnosnaws:
   '1':
     world: world
@@ -197,3 +207,20 @@ kevinsevin:
     X: -437.2618687971444
     Y: 57.0
     Z: -732.6487070886341
+PenguinRobertSig:
+  admin:
+    world: world
+    X: -101.64228213099041
+    Y: 71.0
+    Z: 92.49742979259989
+simsimnawsnaws:
+  deletelater:
+    world: world
+    X: 647.4847525359164
+    Y: 65.0
+    Z: 240.99773670665257
+  '1':
+    world: world
+    X: -430.0163556895764
+    Y: 74.0
+    Z: -739.430857206337
