--- a/server/plugins/SimpleHomes/Homes.yml
+++ b/server/plugins/SimpleHomes/Homes.yml
@@ -51,16 +51,6 @@ sowrdsmithsoren5:
     X: -266.09307820317844
     Y: 71.0
     Z: -106.90258030956745
-  '1':
-    world: world
-    X: -262.1481160271464
-    Y: 24.0
-    Z: -51.54221588876064
-  '2':
-    world: world
-    X: -260.887988675258
-    Y: 89.0
-    Z: -167.74682997074328
   '3':
     world: world
     X: -226.66260336370914
@@ -76,6 +66,11 @@ sowrdsmithsoren5:
     X: -1.6492966531127926
     Y: 69.0
     Z: 123.31839250853963
+  '1':
+    world: world
+    X: -125.69999998807907
+    Y: 62.0
+    Z: 47.411086863008165
 linglingg_:
   oliver:
     world: world
@@ -213,6 +208,16 @@ PenguinRobertSig:
     X: -101.64228213099041
     Y: 71.0
     Z: 92.49742979259989
+  spawn:
+    world: world
+    X: -104.55219502476719
+    Y: 65.0
+    Z: 82.4529188278812
+  soren:
+    world: world
+    X: -124.5622441816023
+    Y: 62.0
+    Z: 46.459993355280304
 simsimnawsnaws:
   deletelater:
     world: world
