--- a/server/plugins/SimpleHomes/Homes.yml
+++ b/server/plugins/SimpleHomes/Homes.yml
@@ -105,26 +105,21 @@ idk:
     X: -436.5238541324031
     Y: 57.0
     Z: -732.9324383015306
-  '2':
-    world: world
-    X: -261.2372927354425
-    Y: 89.0
-    Z: -167.30763233636588
-  '3':
-    world: world
-    X: 173.04636216345028
-    Y: 72.0
-    Z: -830.6355258477848
-  '0':
-    world: world
-    X: 647.8966205920702
-    Y: 64.0
-    Z: 243.45970877861134
   '00':
     world: world
     X: -389.48403831670726
     Y: 63.0
     Z: -727.3664985836305
+  enter:
+    world: world
+    X: -395.184415316432
+    Y: 16.0
+    Z: -808.0543957727031
+  spawn:
+    world: world
+    X: -105.45267154459786
+    Y: 71.0
+    Z: 78.67539001593522
 simsimnosnaws:
   '1':
     world: world
