--- a/server/server.properties
+++ b/server/server.properties
@@ -1,7 +1,7 @@
 #Minecraft server properties
-#Thu Sep 12 15:48:33 UTC 2024
+#Thu Nov 07 16:34:46 UTC 2024
 allow-flight=false
-allow-nether=true
+allow-nether=false
 announce-player-achievements=true
 broadcast-console-to-ops=false
 debug=false
