--- a/server/plugins/TAB/users.yml
+++ b/server/plugins/TAB/users.yml
@@ -36,3 +36,8 @@ UR_A_FAULAIR_:
   tabprefix: '[u are my sunshine]'
 oliver_is_cool__:
   tabprefix: '[u are my sunshine]'
+6b4cd6c5-90d6-31ca-81c0-200b0a12322e:
+  tabprefix: (moo)
+ca123607-700e-372e-ab71-3274d6da1938:
+  tabprefix: (moo)
+24d1f12f-57ff-3135-a019-c218d8b2fef1: {}
